# dakko

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  package.nix  result  tailwind.config.js
src/: app.css  app.html  app.rs  http.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  error.rs  init.rs  main.rs  relationship.rs  state.rs  status.rs  timeline.rs  user.rs
src/components/: bootstrap.rs  composition.rs  content.rs  mod.rs  status.rs
src/lib/: AccountView.svelte  Bookmarks.svelte  ClientContent.svelte  CompositionArea.svelte  FollowRequests.svelte  MainContent.svelte  Notification.svelte  NotificationPanel.svelte  RenderedContent.svelte  SettingsPanel.svelte  Sidebar.svelte  Status.svelte  Timeline.svelte  context.ts  filtering.ts  index.ts  log.ts  types.ts  utils.ts
src/lib/api/: account.ts  content.ts  fetchers.ts  index.ts  instance.ts  user.ts
src/lib/client-view/: Bookmarks.svelte  ClientContent.svelte  FollowRequests.svelte  SettingsPanel.svelte
src/lib/generic/: CompositionArea.svelte  EmojiPicker.svelte  RenderedContent.svelte  emoji-store.ts
src/lib/model/: AccountView.svelte  ExpandedStatus.svelte  FilterWarning.svelte  Notification.svelte  Status.svelte  StatusAttachments.svelte  StatusContent.svelte  StatusHeader.svelte  Timeline.svelte  timeline-store.ts
src/lib/pane/: Bootstrap.svelte  Error.svelte  MainContent.svelte  NotificationPanel.svelte  Sidebar.svelte  bootstrap.ts  error-store.ts
src/routes/: +layout.svelte  +page.svelte  Greet.svelte
(+9 files in other folders)
